# mcufont

./: CMakeLists.txt
decoder/: mcufont.h  mf_bwfont.c  mf_bwfont.h  mf_config.h  mf_encoding.c  mf_encoding.h  mf_font.c  mf_font.h  mf_justify.c  mf_justify.h  mf_kerning.c  mf_kerning.h  mf_rlefont.c  mf_rlefont.h  mf_scaledfont.c  mf_scaledfont.h  mf_wordwrap.h
encoder/: bdf_import.cc  datafile.cc  encode_rlefont.cc  export_bwfont.cc  export_rlefont.cc  exporttools.cc  freetype_import.cc  importtools.cc  main.cc  optimize_rlefont.cc
tools/: generate.py
